# avr-hal

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  TODO.txt  flake.nix  help.html  issue.md  mcu_datasheet_notes.txt  meta.txt  notes.txt  open_files.txt  settings.html  src-files.js
.github/: copilot-instructions.md
Notes/: usb.txt
arduino-hal/: Cargo.toml
arduino_hal/: all.html  attr.entry.html  fn.delay_ms.html  fn.delay_ns.html  fn.delay_us.html  index.html  macro.default_serial.html  macro.pins.html  type.DefaultClock.html  type.Delay.html
atmega_hal/: all.html  index.html  macro.pins.html  struct.Atmega.html  struct.Peripherals.html
attiny_hal/: all.html  index.html  macro.pins.html  struct.Attiny.html  struct.Peripherals.html  struct.Spi.html
avr-hal-generic/: Cargo.toml
avr_device/: all.html  index.html
avr_device_macros/: all.html  attr.entry.html  attr.interrupt.html  index.html
avr_hal_generic/: all.html  index.html  macro.impl_adc.html  macro.impl_eeprom_atmega.html  macro.impl_eeprom_atmega_old.html  macro.impl_eeprom_attiny.html  macro.impl_eeprom_common.html  macro.impl_i2c_twi.html  macro.impl_port_traditional.html  macro.impl_port_traditional_base.html  macro.impl_port_traditional_old.html  macro.impl_simple_pwm.html  macro.impl_spi.html  macro.impl_usart_traditional.html  macro.impl_wdt.html  macro.renamed_pins.html
bare_metal/: all.html  index.html  struct.CriticalSection.html  struct.Mutex.html
critical_section/: all.html  fn.acquire.html  fn.release.html  (+8 more)
examples/arduino-micro/: Cargo.toml  Ravedude.toml
(+3852 files in other folders)
