[package]
name = "arduino-micro-examples"
version = "0.0.0"
edition = "2021"
publish = false

# TODO: Do I need all these dependencies?
# e.g. given the fact that I'm not doing a UART example, I shouldn't need `ufmt`?
[dependencies]
panic-halt = "1.0.0"

[dependencies.arduino-hal]
path = "../../arduino-hal/"
features = ["arduino-micro"]

[dependencies.avr-device]
version = "0.8"
